// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Carousel component > renders correctly when products data is available 1`] = `
<div>
  <div
    class="sc-dTvVRJ bRYsGP"
  >
    <ul
      aria-label="carousel-image-list"
      class="sc-jwTyAe iHTzTy"
    >
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/1"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 1"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-1.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 1
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/2"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 2"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-2.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 2
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/3"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 3"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-3.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 3
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/4"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 4"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-4.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 4
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/5"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 5"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-5.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 5
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/6"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 6"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-6.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 6
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/7"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 7"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-7.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 7
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/8"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 8"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-8.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 8
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/9"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 9"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-9.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 9
            </p>
          </div>
        </a>
      </li>
      <li
        class="sc-hjsuWn ibuNrn"
      >
        <a
          aria-label="product-link"
          class="sc-jJLAfE fulvdC"
          data-discover="true"
          href="/product/10"
        >
          <div
            class="sc-hwkwBN dYxlyM"
          >
            <img
              alt="Product 10"
              class="sc-kNOymR VXMnK"
              src="http://example.com/image-10.jpg"
            />
          </div>
          <div
            class="sc-dYwGCk fQsBUW"
          >
            <p
              class="sc-lgpSej eNDOWy"
            >
              Product 10
            </p>
          </div>
        </a>
      </li>
    </ul>
    <div
      class="sc-eqYatC jVAfUX"
    >
      <button
        aria-label="previous-slide-button"
        class="sc-kcLKEh grrYbN"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-left"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m15 18-6-6 6-6"
          />
        </svg>
      </button>
      <div
        class="sc-dntSTA dGzGdu"
      >
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz clbvBz"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
        <button
          aria-label="carousel-navigation-button"
          class="sc-kvnevz kinrjB"
        />
      </div>
      <button
        aria-label="next-slide-button"
        class="sc-kcLKEh grrYbN"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Carousel component > shows error status when products data is not available 1`] = `
<div>
  <div
    class="sc-dTvVRJ bRYsGP"
  >
    <div
      class="sc-fhHczv sc-ggWZvA ewGzxY MIVzs"
    >
      <p>
        Could not load carousel :(
      </p>
      <p>
        Error: 
        Could not fetch products
      </p>
    </div>
  </div>
</div>
`;

exports[`Carousel component > shows loading status 1`] = `
<div>
  <div
    class="sc-dTvVRJ bRYsGP"
  >
    <div
      class="sc-fhHczv sc-ggWZvA ewGzxY MIVzs"
    >
      Loading products...
    </div>
  </div>
</div>
`;
